deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: studio
  name: studio

spec:
  replicas: 1
  selector:
    matchLabels:
      app:  studio
  template:
    metadata:
      labels:
        app: studio
    spec:
      containers:
        - image: gcr.io/joshlong/studio
          imagePullPolicy: Always
          name:  studio
