deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "studio-certificate"
    kubernetes.io/ingress.global-static-ip-name: "bootiful-podcast-studio-ip"
    kubernetes.io/ingress.class: "gce"
  name: studio-ingress
spec:
  defaultBackend:
    service:
      name: studio
      port:
        number: 80
